apps/site/web/static/css/app.scss
@import "variables";
@import "bootstrap";
@import "vendor/font-awesome-4.6.3/scss/font-awesome";
@import "helpers";
@import "route-icon";
@import "mode-group";
@import "card";

@import "index";
@import "alerts";
@import "schedule";
@import "date-toggle";

body {
  background-color: $homepage-bg-color;
}

@include media-breakpoint-up(sm) {
  // we only need the BG image if the screen is big enough
  body {
    background-image: url(/images/mbta-train-bkg.jpg);
    background-repeat: no-repeat;
    background-size: 100%;
    background-attachment: fixed;
  }
}

.header {
  background-color: white;
}

.navbar-logo {
  svg {
    fill: $gray-dark;
  }
}

.navbar-brand, .nav-link {
  color: $gray-dark;
}

.footer {
  margin-top: 2.25rem;
  color: white;
  text-align: center;
  font-size: $font-size-sm;
}

.footer-link-list {
  @include clearfix;
  padding: 0;
}

.footer-link-list-item {
  display: inline;
  list-style: none;

  &:before {
    content: " | ";
  }
  &:first-child:before {
    content: "";
  }
}

.footer-link {
  color: white;
}

.main-container {
  @extend .bg-white;
  padding-bottom: 1em;
}

.alert:empty {
  display: none;
}

.navbar-logo {
  float: left;
  display: block;
  height: 36px;
  width: 36px;
  margin-right: 0.5em;
}

@include media-breakpoint-down(sm) {
  .header {
    background-color: $brand-primary;
    color: $nav-mobile-link-color;
  }

  .navbar-brand, .nav-link {
    color: $nav-mobile-link-color;

    @include hover-focus-active {
      color: $nav-mobile-link-color;
      text-decoration: underline;
    }
  }

  .navbar-brand {
    font-size: 0.75rem !important;
    max-width: 12rem;
  }

  .navbar-logo {
    svg {
      position: absolute;
      width: 150px;
      left: 4px;
      top: 4px;

      & > g {
        fill: white;
      }
    }
  }

  .nav-item {
    margin-left: 0 !important;
    text-align: center;
    width: 100%;

    a {
      height: 3rem;
    }
  }

  .full-width {
    // removes the margins on the outside
    @include make-row();
  }
}

#social-nav {
  padding-top: 7px;

  a {
    width: 24px;
    height: 24px;
    text-align: center;
    border-radius: 100%;
    color: white;
  }

  li {
    margin-left: 6px;
  }

  .social-nav-instagram {
    background-color: #1c1e23;
  }

  .social-nav-youtube {
    background-color: #cd201f;
  }

  .social-nav-twitter {
    background-color: #55acee;
  }

  .social-nav-facebook {
    background-color: #395185;
  }
}

